CRUD_USER finished
Files updated
-category, resource,user models where changed. A block of code were
added in order to solve the bug of empty values. This code changes
empty values into nulls, so the DB schema is followed and dismiss
future insert/update problems
-routes: some routes were updated
-UsersController: The methods were improved in order to fulfill the
requirements expectations.
-admin view: the hrefs were changed and the user crud was incorporated
to this requirement.
Files added
-Views from user
This CRUD was tested but no documentation was made

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -115,3 +115,15 @@
 .sidebar_admin li a:hover {
 	color: #007833;
 }
+
+
+/************************************/
+/*	          Admin Content			*/
+/************************************/
+.content_icon_admin {
+	background: none;
+	border: none;
+}
+.error{
+	color: red ;
+}
