--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,8 +3,15 @@
 /************************************/
 
 .bg_gris{
-	background: #9595A1;
+	background: #2424B2;
 	height: 60px;
+	box-shadow: 10px 5px 5px #7A7A7A;
+	z-index:9999;
+	position:fixed;
+	width:102%;
+	top:0;
+	left:0;
+	 
 }
 
 .padding_header{
@@ -16,12 +23,15 @@
 	font-size: 14pt;
 	font-weight: bold;
 	text-decoration: none;
-	padding: 15px 10px;
+	text-align: right;
+	padding-left:20px;
+	padding-top:7px;
 }
 
 .search_bar_user{
-	margin-top: 4px;
-	width: 100%;
+	/*margin-top: 4px;*/
+	width: 170%;
+	padding-bottom:50px;
 }
 
 .home_header{
@@ -29,7 +39,7 @@
 	font-size: 14pt;
 	font-weight: bold;
 	text-decoration: none;
-	padding: 15px 10px;
+	padding: 10px 10px;
 }
 
 .account_header{
@@ -37,7 +47,7 @@
 	font-size: 14pt;
 	font-weight: bold;
 	text-decoration: none;
-	padding: 15px 10px;
+	padding: 10px 10px;
 }
 
 .logout_header{
@@ -45,7 +55,7 @@
 	font-size: 14pt;
 	font-weight: bold;
 	text-decoration: none;
-	padding: 15px 10px;
+	padding: 10px 10px;
 }
 
 /************************************/
