--- a/public/css/bootstrap-theme.css
+++ b/public/css/bootstrap-theme.css
@@ -49,8 +49,8 @@
   background-image:         linear-gradient(to bottom, #fff 0%, #e0e0e0 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  background-repeat: repeat-x;
-  border-color: #dbdbdb;
+  /*background-repeat: repeat-x;
+*/  border-color: #dbdbdb;
   border-color: #ccc;
 }
 .btn-default:hover,
@@ -76,7 +76,7 @@
   background-image:         linear-gradient(to bottom, #337ab7 0%, #265a88 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff265a88', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  background-repeat: repeat-x;
+/*   background-repeat: repeat-x; */
   border-color: #245580;
 }
 .btn-primary:hover,
