--- a/public/css/component.css
+++ b/public/css/component.css
@@ -9,6 +9,7 @@
 	float: left;
 	max-width: 250px;
 	width: 25%;
+	/*height: 300px;*/
 	color: #333;
 }
 
@@ -21,6 +22,7 @@
 	overflow: hidden;
 	margin: 5px;
 	background: #333;
+    box-shadow: 10px 10px 5px #888888;
 }
 
 .grid figure img {
@@ -43,12 +45,12 @@
 }
 
 .grid figcaption h2 {
-	margin: 0 0 20px 0;
-	color: #3498db;
+	margin: 0 0 5px 0;
+	color: #0066FF;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-weight: 300;
-	font-size: 130%;
+	font-size: 180%;
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
 }
@@ -57,6 +59,7 @@
 	padding: 0 20px;
 	color: #aaa;
 	font-weight: 300;
+	font-size: 150%;
 	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
 	transition: opacity 0.3s, transform 0.3s;
 }
@@ -123,9 +126,9 @@
 .demo-3 .grid figure button {
 	top: 50%;
 	left: 50%;
-	border: 3px solid #fff;
+	border: 3px solid #000000;
 	background: transparent;
-	color: #fff;
+	color: #000000;
 	opacity: 0;
 	-webkit-transform: translateY(-50%) translateX(-50%) scale(0.25);
 	transform: translateY(-50%) translateX(-50%) scale(0.25);
@@ -188,11 +191,11 @@
 }
 
 .demo-3 body {
-	background: #52be7f;
+	background: #ECEBEB;
 }
 
 .demo-3 .grid figcaption h2 {
-	color: #52be7f;
+	color: #0066FF;
 }
 
 .demo-3 .grid a:hover figcaption h2 {
