--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -13,7 +13,7 @@
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-	background: #333;
+	background: #ECEBEB;
 	color: #fff;
 	font-weight: 400;
 	font-size: 1em;
