--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,3 +137,14 @@
 .error{
 	color: red ;
 }
+
+/************************************/
+/*	          Booking Content			*/
+/************************************/
+
+.content_booking{
+
+	z-index:10;
+	margin-top: 100px;
+}
+
