--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -14,7 +14,7 @@
 
 body {
 	background: #ECEBEB;
-	color: #fff;
+	/*color: #fff;*/
 	font-weight: 400;
 	font-size: 1em;
 	font-family: 'Lato', Arial, sans-serif;
