--- a/public/css/bootstrap-theme.css
+++ b/public/css/bootstrap-theme.css
@@ -253,13 +253,13 @@
   text-shadow: 0 1px 0 rgba(255, 255, 255, .25);
 }
 .navbar-inverse {
-  background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #222 100%);
-  background-image:      -o-linear-gradient(top, #3c3c3c 0%, #222 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#222));
-  background-image:         linear-gradient(to bottom, #3c3c3c 0%, #222 100%);
+  background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #2424B2 100%);
+  background-image:      -o-linear-gradient(top, #3c3c3c 0%, #2424B2 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#2424B2));
+  background-image:         linear-gradient(to bottom, #3c3c3c 0%, #2424B2 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  background-repeat: repeat-x;
+  /*background-repeat: repeat-x;*/
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .active > a {
