--- a/public/css/component.css
+++ b/public/css/component.css
@@ -137,9 +137,9 @@
 .demo-3 .grid figure button {
 	top: 50%;
 	left: 50%;
-	border: 3px solid transparent;
-	background: #2424B2;
-	color: #FFFFFF;
+	border: 3px solid #000000;
+	background: transparent;
+	color: #000000;
 	opacity: 0;
 	-webkit-transform: translateY(-50%) translateX(-50%) scale(0.25);
 	transform: translateY(-50%) translateX(-50%) scale(0.25);
