Revert of pull#3
—

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,7 @@
 /************************************/
 
 .bg_gris{
+
 	background: #2424B2;
 	height: 60px;
 	box-shadow: 10px 5px 5px #7A7A7A;
@@ -12,6 +13,7 @@
 	top:0;
 	left:0;
 	 
+
 }
 
 .padding_header{
@@ -23,6 +25,10 @@
 	font-size: 14pt;
 	font-weight: bold;
 	text-decoration: none;
+
+}
+
+.search_bar_user{
 	text-align: right;
 	padding-left:20px;
 	padding-top:7px;
@@ -32,6 +38,7 @@
 	/*margin-top: 4px;*/
 	width: 170%;
 	padding-bottom:50px;
+
 }
 
 .home_header{
@@ -48,6 +55,7 @@
 	font-weight: bold;
 	text-decoration: none;
 	padding: 10px 10px;
+
 }
 
 .logout_header{
@@ -56,6 +64,7 @@
 	font-weight: bold;
 	text-decoration: none;
 	padding: 10px 10px;
+
 }
 
 /************************************/
@@ -105,8 +114,6 @@
 	text-align: center;
 	padding: 0px 0px;
 	font-size: 28pt;
-	/*position:absolute;
-	z-index: 9999;*/
 }
 
 .sidebar_admin li {
@@ -140,16 +147,10 @@
 	color: red ;
 }
 
-.content_admin{
-
-	/*width:700px;*/
-	padding-left: 800px;
-	margin-right: auto;
-	text-align: center;
 
 
 
-}
+
 
 
 /************************************/
@@ -157,8 +158,9 @@
 /************************************/
 
 .content_booking{
-
 	z-index:10;
 	margin-top: 100px;
 }
+
+
 
