Change in recently booked and user modal
Recently booked only shows the resources that the user booked. The user
modal is 50% there.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -332,4 +332,10 @@ input:-moz-placeholder {
         from(#a4b0cb),
         to(#b9c5dd));
 }
+/************************************/
+/*            Modal user                 */
+/************************************/
+/*
+
+
 
