Modal with clock, booking and waitinglist
There is a clock on the modal. You can see the active bookings and the
waiting list.

--- a/public/css/material.css
+++ b/public/css/material.css
@@ -7060,7 +7060,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #03a9f4;
 }
 .nav-tabs {
-  background: #009688;
+  background: #868D9D;
 }
 .nav-tabs > li > a {
   color: #FFFFFF;
