--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1177,7 +1177,7 @@ h6,
   font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
-  color: #0033CC;
+  color: black;
 }
 h1 small,
 h2 small,
