--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -16,7 +16,7 @@ body {
 	background: #ECEBEB;
 	/*color: #fff;*/
 	font-weight: 400;
-	font-size: 1em;
+	/*font-size: 1em;*/
 	font-family: 'Lato', Arial, sans-serif;
 }
 
