View edit user completed

--- a/public/css/style_form.css
+++ b/public/css/style_form.css
@@ -28,6 +28,14 @@ body {
     height: 500px;
 }
 
+.form .header {
+	width: 100px;
+    max-width: 100px;
+
+    height: 200px;
+    max-height: 200px;
+    margin-bottom: 20px;
+}
 
 .form .sep {
     height: 1px;
@@ -48,7 +56,7 @@ body {
     margin-top: 15px;
     margin-left: 0px;
     color: #8f8f8f;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 10;
     letter-spacing: 1px;
     display: inline-block;
@@ -89,3 +97,52 @@ input:-moz-placeholder {
     outline: none;   
 }
 
+.form .inputs #submit {
+    width: 100%;
+    margin-top: 20px;
+    padding: 15px 0;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-align: center;
+    text-decoration: none;
+        background: -moz-linear-gradient(
+        top,
+        #b9c5dd 0%,
+        #a4b0cb);
+    background: -webkit-gradient(
+        linear, left top, left bottom, 
+        from(#b9c5dd),
+        to(#a4b0cb));
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #737b8d;
+    -moz-box-shadow:
+        0px 5px 5px rgba(000,000,000,0.1),
+        inset 0px 1px 0px rgba(255,255,255,0.5);
+    -webkit-box-shadow:
+        0px 5px 5px rgba(000,000,000,0.1),
+        inset 0px 1px 0px rgba(255,255,255,0.5);
+    box-shadow:
+        0px 5px 5px rgba(000,000,000,0.1),
+        inset 0px 1px 0px rgba(255,255,255,0.5);
+    text-shadow:
+        0px 1px 3px rgba(000,000,000,0.3),
+        0px 0px 0px rgba(255,255,255,0);
+    display: table;
+    position: static;
+    clear: both;
+}
+
+.form .inputs #submit:hover {
+    background: -moz-linear-gradient(
+        top,
+        #a4b0cb 0%,
+        #b9c5dd);
+    background: -webkit-gradient(
+        linear, left top, left bottom, 
+        from(#a4b0cb),
+        to(#b9c5dd));
+}
