--- a/public/css/style_form.css
+++ b/public/css/style_form.css
@@ -44,6 +44,18 @@ body {
     margin: 0px 8px;
 }
 
+.form .dropdown{
+    background: #f5f5f5;
+    border-radius: 2px;
+    border: none;
+    padding: 5px 5px;
+    width: 200px;
+    margin-bottom: 5px;
+    display: inline-block;
+    float: right;
+    clear: both;
+}
+
 .form .errors{
 	color: #da4a4a;
     font-size: 10px;
