--- a/public/css/material.css
+++ b/public/css/material.css
@@ -8197,6 +8197,7 @@ hr.on-light {
 }
 .shadow-z-2 {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding:18px;
 }
 .shadow-z-3 {
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
